--- a/assets/app.scss
+++ b/assets/app.scss
@@ -70,43 +70,45 @@ html {
 
 .row {
 	padding-top: 3em;
-	@include outer-container(960px);
-}
-
-.photo {
-	@include span-columns(6);
-	@include shift(1);
+	@include outer-container(1140px);
 	padding-bottom: 3em;
 }
 
-.photo img {
-	@extend %filter-noire;
-	width: 100%;
-	padding-bottom: 1em;
+.row2 {
+	text-align: center;
 }
-.photo img:hover {
+
+.row2 img {
+	@extend %filter-noire;
+}
+.row2 img:hover {
 	@extend %filter-nikki;
 }
-.photo-right {
-	width: 20em;
-	display: inline-block;
-}
+
 .description {
 	li:nth-of-type(1) {
 	color: $orange;
 	font-weight: bold;
 }
-	padding-bottom: 30em;
 	line-height: 2em;
+	display: inline-block;
+	vertical-align: top;
+	padding-left: 1em;
+	text-align: left;
 }
 .phototitle {
 	color: lighten($lightgrey,30%);
 	font-weight: bold;
 	font-size: 1.3em;
+	display: block;
+	position: relative;
+	left: 10em;
 }
 .date {
 	color: $lightgrey;
 	font-size: .8em;
+	position: relative;
+	left: 16.4em;
 }
 .description li {
 	color: lighten($lightgrey,30%)
@@ -118,6 +120,7 @@ html {
 .bottom {
 	text-align: center;
 	position: relative;
+	padding-top: 8em;
 }
 
 .bottom img {
@@ -137,12 +140,28 @@ html {
 
 .bottom-p {
 	position: absolute;
-	top:22em;
+	top:30em;
 	left: 20em;
 	padding-bottom: 3em;
 }
 .bottom-p2 {
 	position: absolute;
-	top:22em;
+	top:30em;
 	left: 46em;
+}
+
+@media (max-width: 1024px) {
+div {
+	background-color: $black;
+}
+.row {
+}
+.photo-right {
+}
+}
+
+@media (max-width: 460px) {
+div {
+	background-color: yellow;
+}
 }
